--- a/Template/template.html
+++ b/Template/template.html
@@ -26,6 +26,7 @@
 		.p_template{width:100%;}
 		.p_template h3{margin:20px 0 10px;font-size:20px;font-family:"¸¼Àº °íµñ", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD »êµ¹°íµñ Neo', Apple-Gothic, '¾ÖÇÃ°íµñ', 'Tahoma', 'dotum', 'µ¸¿ò', 'gulim', '±¼¸²', sans-serif;}
 		.p_template p{margin:10px 0;font-size:14px;font-family:"¸¼Àº °íµñ", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD »êµ¹°íµñ Neo', Apple-Gothic, '¾ÖÇÃ°íµñ', 'Tahoma', 'dotum', 'µ¸¿ò', 'gulim', '±¼¸²', sans-serif;}
+        .jdk{position:relative;width: 100%;}
 	</style>
 </head>
 <body>
