--- a/Template/template.html
+++ b/Template/template.html
@@ -1,83 +1,1 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html">
-<head>
-	<title>옥션 - 모바일 쇼핑은 옥션</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=euc-kr" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<script type="text/javascript" src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/common.js?ver=0.1"></script>
-	<style type="text/css">
-		@import url(http://fonts.googleapis.com/css?family=Roboto:400,700);
-		@import url(http://fonts.googleapis.com/css?family=Open+Sans:700);
-
-		#p_wrap{width:100%;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}
-		#p_wrap #p_header{padding:60px 60px 100px;}
-		#p_wrap #p_header h1{padding:90px;font-weight:normal;line-height:normal;font-size:60px;background:#464646;color:#fff; font-family: 'Open Sans', sans-serif;}
-		#p_wrap #p_header .copyright{margin-top:20px;text-align:right;font-size:14px;}
-		#p_wrap h2{margin:20px 0 10px;font-size:30px;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}
-
-		#p_wrap{width:100%;}
-		#p_wrap h2{margin:20px 0 10px;font-size:30px;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}
-
-		#p_navi{width:100%;background:#464646;}
-		#p_navi ul{width:100%;overflow:hidden;}
-		#p_navi ul li{width:50%;float:left;text-align:center;height:40px;line-height:40px;font-size:15px;}
-		#p_navi ul li a{color:#fff;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}
-
-		.p_template{width:100%;}
-		.p_template h3{margin:20px 0 10px;font-size:20px;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}
-		.p_template p{margin:10px 0;font-size:14px;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}
-        .jdk{position:relative;width: 100%;}
-	</style>
-</head>
-<body>
-
-<div id="p_wrap">
-	<div id="p_header">
-		<h1 id="logo">Promotion Template / Coding</h1>
-		<p class="copyright">
-			#cd4;
-		</p>
-	</div>
-
-	<div id="p_navi">
-		<ul>
-			<li><a href="#goods">상품</a></li>
-			<li><a href="#coupon">쿠폰</a></li>
-		</ul>
-	</div>
-
-	<h2 id="goods">상품</h2>
-	<div class="p_template" id="goods_list1">
-		<h3>상품 - 1단</h3>
-		<p><a href="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c1_list.html" target="_blank">http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c1_list.html</a></p>
-		<iframe src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c1_list.html" frameborder="0" width="980" height="100%" scrolling="no" allowtransparency="true"></iframe>
-	</div>
-
-	<div class="p_template" id="goods_list2">
-		<h3>상품 - 2단</h3>
-		<p><a href="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c2_list.html" target="_blank">http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c2_list.html</a></p>
-		<iframe src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c2_list.html" frameborder="0" width="980" height="100%" scrolling="no" allowtransparency="true"></iframe>
-	</div>
-
-	<div class="p_template" id="goods_list3">
-		<h3>상품 - 3단</h3>
-		<p><a href="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c3_list.html" target="_blank">http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c3_list.html</a></p>
-		<iframe src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c3_list.html" frameborder="0" width="980" height="100%" scrolling="no" allowtransparency="true"></iframe>
-	</div>
-
-	<div class="p_template" id="goods_list4">
-		<h3>상품 - 4단</h3>
-		<p><a href="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c4_list.html" target="_blank">http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c4_list.html</a></p>
-		<iframe src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c4_list.html" frameborder="0" width="980" height="100%" scrolling="no" allowtransparency="true"></iframe>
-	</div>
-
-	<h2 id="coupon">쿠폰</h2>
-	<div class="p_template">
-		<h3>남은수량(텍스트), 쿠폰받기</h3>
-		<p><a href="http://eventimg.auction.co.kr/md/auction/07C0B575AE/coupon.html" target="_blank">http://eventimg.auction.co.kr/md/auction/07C0B575AE/coupon.html</a></p>
-		<iframe src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/coupon.html" frameborder="0" width="980" height="100%" scrolling="no" allowtransparency="true"></iframe>
-	</div>
-</div>
-
-</body>
-</html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns="http://www.w3.org/1999/html"><head>	<title>옥션 - 모바일 쇼핑은 옥션</title>	<meta http-equiv="Content-Type" content="text/html; charset=euc-kr" />	<meta http-equiv="X-UA-Compatible" content="IE=edge" />	<script type="text/javascript" src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/common.js?ver=0.1"></script>	<style type="text/css">		@import url(http://fonts.googleapis.com/css?family=Roboto:400,700);		@import url(http://fonts.googleapis.com/css?family=Open+Sans:700);		#p_wrap{width:100%;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}		#p_wrap #p_header{padding:60px 60px 100px;}		#p_wrap #p_header h1{padding:90px;font-weight:normal;line-height:normal;font-size:60px;background:#464646;color:#fff; font-family: 'Open Sans', sans-serif;}		#p_wrap #p_header .copyright{margin-top:20px;text-align:right;font-size:14px;}		#p_wrap h2{margin:20px 0 10px;font-size:30px;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}		#p_wrap{width:100%;}		#p_wrap h2{margin:20px 0 10px;font-size:30px;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}		#p_navi{width:100%;background:#464646;}		#p_navi ul{width:100%;overflow:hidden;}		#p_navi ul li{width:50%;float:left;text-align:center;height:40px;line-height:40px;font-size:15px;}		#p_navi ul li a{color:#fff;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}		.p_template{width:100%;}		.p_template h3{margin:20px 0 10px;font-size:20px;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}		.p_template p{margin:10px 0;font-size:14px;font-family:"맑은 고딕", Roboto, Droid Sans, Helvetica, AppleSDGothicNeo, 'Apple SD 산돌고딕 Neo', Apple-Gothic, '애플고딕', 'Tahoma', 'dotum', '돋움', 'gulim', '굴림', sans-serif;}	</style></head><body><div id="p_wrap">	<div id="p_header">		<h1 id="logo">Promotion Template / Coding</h1>		<p class="copyright">			#cd4;		</p>	</div>	<div id="p_navi">		<ul>			<li><a href="#goods">상품</a></li>			<li><a href="#coupon">쿠폰</a></li>		</ul>	</div>	<h2 id="goods">상품</h2>	<div class="p_template" id="goods_list1">		<h3>상품 - 1단</h3>		<p><a href="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c1_list.html" target="_blank">http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c1_list.html</a></p>		<iframe src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c1_list.html" frameborder="0" width="980" height="100%" scrolling="no" allowtransparency="true"></iframe>	</div>	<div class="p_template" id="goods_list2">		<h3>상품 - 2단</h3>		<p><a href="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c2_list.html" target="_blank">http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c2_list.html</a></p>		<iframe src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c2_list.html" frameborder="0" width="980" height="100%" scrolling="no" allowtransparency="true"></iframe>	</div>	<div class="p_template" id="goods_list3">		<h3>상품 - 3단</h3>		<p><a href="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c3_list.html" target="_blank">http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c3_list.html</a></p>		<iframe src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c3_list.html" frameborder="0" width="980" height="100%" scrolling="no" allowtransparency="true"></iframe>	</div>	<div class="p_template" id="goods_list4">		<h3>상품 - 4단</h3>		<p><a href="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c4_list.html" target="_blank">http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c4_list.html</a></p>		<iframe src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/goods_c4_list.html" frameborder="0" width="980" height="100%" scrolling="no" allowtransparency="true"></iframe>	</div>	<h2 id="coupon">쿠폰</h2>	<div class="p_template">		<h3>남은수량(텍스트), 쿠폰받기</h3>		<p><a href="http://eventimg.auction.co.kr/md/auction/07C0B575AE/coupon.html" target="_blank">http://eventimg.auction.co.kr/md/auction/07C0B575AE/coupon.html</a></p>		<iframe src="http://eventimg.auction.co.kr/md/auction/07C0B575AE/coupon.html" frameborder="0" width="980" height="100%" scrolling="no" allowtransparency="true"></iframe>	</div></div></body></html>
